// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.1.1 darwin

scriptPath=\\"node_modules/husky/run.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"
node=node

if ! command -v node >/dev/null 2>&1; then
  echo \\"Can't find node in PATH, trying to find a node binary on your system\\"
  # Fall-back to run-node since plain node was not found.
  node=node_modules/run-node/run-node
fi

if [ -f $scriptPath ]; then
  $node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.1.1 win32

scriptPath=\\"node_modules/husky/run.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"
node=node

if [ -f $scriptPath ]; then
  $node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
